# CGTeamWork

./: .env  .gitattributes  .gitignore  .gitmodules  .pylintrc  CGTeamWork返修样表.xlsx  Link导入样表.xlsx  Makefile  Pipfile  aia_manage.py  call_cgtw_link.py  cspell.json  install_site_packages.bat  pyproject.toml  pyrightconfig.json  requirement.txt  requirements-constraint.txt  requirements.txt  run.py  statistics.head.html  statistics.py  statistics.ui  ui_statistics.py
Documentation/: Makefile  make.bat
Documentation/source/: aia_manage.rst  client_manage.rst  conf.py  csheet.rst  downloader.rst  export_history.rst  index.rst  noter.rst  reference.rst  set_date.rst  statistics.rst  uploader.rst  (+1 more)
downloader/: config.py  files.py  mainwindow.py  mainwindow.ui  run.bat  sync.py  ui_mainwindow.py  uic.bat
lib/: __about__.py  __init__.py  aia_manage.py  aia_status_transfer.py  assign_downstream.py  cgtwb.py  cgtwq_console.py  client_manage.py  count_retake.py  csheet_hook.py  downloader.py  downloader.ui  export_history.py  filetools.py  link_import.py  link_maya.py  localsite.py  noter.py  run_aia_status_transfer.py  run_assign_downstream.py  run_cgtwq_console.py  run_csheet_tool.py  run_jupyter.py  run_uploader.py  run_xlsx_import.py  set_date.py  set_date.ui  set_status_by_pipeline.py  statistics.py  statistics.ui  submit.py  view_artists.py  xlsx_export.py  xlsx_import.py  xlsxtools.py
notebook/: base.ipynb
scripts/: activate-venv.sh  deploy_to_server.ps1
tests/: test_cgtwb.py  test_downloader.py
typings/: win_unicode_console.pyi
wulifang/: __init__.py
(+20 files in other folders)
