[tool.poetry]
name = "cgteamwork"
version = "0.1.0"
description = "CGTeamwork plugins for wulifang studio."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^2.7"
wlf = {path = "./vendor/wlf-0.6.0-py2.py3-none-any.whl"}
cgtwq = {path = "./vendor/cgtwq-3.0.0b1-py2.py3-none-any.whl"}
cgtwq-uploader = {path = "./vendor/cgtwq_uploader-3.6.0-py2.py3-none-any.whl"}
PySide = "^1.2.4"
win-unicode-console = "^0.5"
ipython = "^5.8"
ipykernel = "^4.10"
tornado = "^5.1.1"
jupyter-console = "^5.2.0"
jupyter = "^1.0.0"
nbformat = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

